# pycsw-test

./: Dockerfile  README.md  iso_template.xml  pycsw-config-docker.cfg  pyproject.toml
src/dyn_repo/: dyn_repo.py  mappings.py
